# PicoUnits

./: .flake8  .gitignore  .picounits  .pylintrc  CHANGELOG.md  LICENSE  README.md  __init__.py  cSpell.json  pyproject.toml  readme.md  setup.py  test.py  units.ut
.github/workflows/: publish.yml  publish_lower_picounits.yml  publish_picounits.yml
docs/: _placeholder  readme.md
example/: introduction.py  introduction.uiv  units.ut
examples/: analytical_motion.py  basic.py  basics.py  introduction.py  introduction.uiv  parameters.uiv  simple_motion.py  test.py  test_reciprocal.py
examples/basketball/: equations.py  evaluate.py  main.py  matplot.py  parameters.uiv
examples/coilgun/: equations.py  main.py  matplot.py  parameters.uiv  plotter.py  units.ut
examples/libraries/: main.py  materials.uiv
examples/linearizer/: main.py
examples/material_libraries/: library.uiv  main.py
examples/solver/: engine.py  main.py  parameters.uiv
examples/thermal_solver/: main.py  solver.py
examples/thermal_test/: main.py  solver.py
src/picounits/: __init__.py  constants.py  lazy_imports.py  py.typed
src/picounits/blueprints/: __init__.py  boundary_class.py
src/picounits/configuration/: __init__.py  cli.py  config.py  management.py  picounits.py
src/picounits/core/: __init__.py  conversion.py  dimensions.py  enums.py  qualities.py  quantities.py  scales.py  unit.py
src/picounits/core/methods/: arithmetic.py  (+2 more)
src/picounits/dimensions/: __init__.py  qualities.py  units.py
src/picounits/extensions/: __init__.py  attribute_loader.py  construction.py  definitions.py  dsl_parser.py  loader.py  parser.py  parser_errors.py  plotting.py
src/tests/: runner.py  test.py
src/tests/domain/: unit_tests.py
src/unit_test/: runner.py
src/unit_test/parser/: core.py
src/unit_test/quantities/: quantities_construction.py
src/unit_test/unit/: dimensional_algebra.py  dimensional_construction.py
(+53 files in other folders)
